# bible-verse-search-app

./: README.md  app.py  model.py  pyproject.toml  requirements.txt
model/EncoderModel/: config.json  tokenizer_config.json
