[tool.poetry]
name = "verse-finder"
version = "0.1.0"
description = ""
authors = ["shreydan <iamshreydan@gmail.com>"]
readme = "README.md"
packages = [{include = "verse_finder"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
transformers = "^4.23.1"
sentence-transformers = "^2.2.2"
streamlit = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
